# jietuba

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  README_EN.md  README_JA.md  gifrecorder-0.2.1-cp311-cp311-win_amd64.whl  jietuba_rust-0.3.0-cp311-cp311-win_amd64.whl  jietuba_rust-0.3.0-cp39-cp39-win_amd64.whl  jietubafabu.code-workspace  longstitch-0.3.0-cp39-cp39-win_amd64.whl  longstitch-0.3.8-cp311-cp311-win_amd64.whl  pyclipboard-0.2.0-cp39-cp39-win_amd64.whl  pyclipboard-0.2.1-cp39-cp39-win_amd64.whl  pyclipboard-0.3.10-cp311-cp311-win_amd64.whl  windows_media_ocr-0.1.0-cp39-cp39-win_amd64.whl  windows_media_ocr-0.3.1-cp311-cp311-win_amd64.whl
canvas/: model.py
canvas/items/: __init__.py  background_item.py  drawing_items.py  overlay_mask_item.py
capture/: window_finder.py
core/: i18n.py
main/: compile_translations.py  main_app.py  requirements_no_ocr.txt  requirements_with_ocr.txt
main/canvas/: __init__.py  export.py  handle_editor.py  layer_editor.py  model.py  scene.py  selection_model.py  smart_edit_controller.py  toolbar_adapter.py  undo.py  view.py
main/canvas/items/: __init__.py  background_item.py  drawing_items.py  overlay_mask_item.py  overlay_pixmap_item.py  selection_item.py
main/capture/: SMART_SELECTION.md  __init__.py  capture_service.py  window_finder.py
main/clipboard/: __init__.py  data_controller.py  data_manager.py  data_setting.py  emoji_data.py  frameless_mixin.py  group_bar.py  interaction.py  item_delegate.py  item_widget.py  manage_dialog.py  manager.py  pin_window.py  preview_popup.py  setting_panel.py  test_clipboard.py  theme_styles.py  themes.py  window.py
main/core/: __init__.py  bootstrap.py  clipboard_utils.py  constants.py  crash_handler.py  export.py  hotkey_system.py  i18n.py  logger.py  platform_utils.py  qt_utils.py  resource_manager.py  save.py  shortcut_manager.py  theme.py
main/gif/: __init__.py  _widgets.py  composer.py  cursor_overlay.py  drawing_toolbar.py  drawing_view.py  frame_recorder.py  overlay.py  playback_controller.py  playback_engine.py  playback_toolbar.py  record_toolbar.py  record_window.py
main/ocr/: OCR_INTEGRATION.md  __init__.py  ocr_manager.py  ocr_manager_backup.py  windos_ocr.py
main/pin/: __init__.py  ocr_text_layer.py  pin_border_overlay.py  pin_canvas.py  pin_canvas_renderer.py  pin_canvas_view.py  pin_context_menu.py  pin_controls.py  pin_image_transform.py  pin_manager.py  pin_mock_scene.py  pin_ocr_manager.py  pin_shortcut.py  pin_thumbnail.py  pin_toolbar.py  pin_translation.py  pin_window.py  test_pin_vector.py
main/settings/: __init__.py  tool_settings.py
main/stitch/: __init__.py  jietuba_long_stitch.py  jietuba_long_stitch_rust.py  jietuba_long_stitch_unified.py  scroll_toolbar.py  scroll_window.py
main/tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_clipboard_data.py  test_clipboard_manage_dialog.py  test_clipboard_themes.py  test_clipboard_utils.py  test_core_utils.py  test_crash_handler.py  test_emoji_data.py  test_gif_data.py  test_i18n.py  test_resource_manager.py  test_save_service.py  test_selection_model.py  test_stitch_algorithm.py  test_theme_manager.py  test_tool_settings.py  test_tools_base.py  test_undo_stack.py
main/tools/: __init__.py  action.py  arrow.py  base.py  controller.py  cursor.py  cursor_manager.py  ellipse.py  eraser.py  highlighter.py  number.py  pen.py  rect.py  text.py
main/translation/: __init__.py  deepl_service.py  languages.py  translation_dialog.py  translation_manager.py
main/translations/: app_en.qm  app_en.xml  app_ja.qm  app_ja.xml  app_zh.qm  app_zh.xml  clipboard_translations.txt
main/ui/: __init__.py  arrow_settings_panel.py  base_settings_panel.py  color_picker_button.py  color_picker_dialog.py  dialogs.py  hotkey_edit.py  inapp_key_edit.py  magnifier.py  mask_overlay.py  number_settings_panel.py  paint_settings_panel.py  screenshot_window.py  settings_window.py  shape_settings_panel.py  text_settings_panel.py  toolbar.py
main/ui/selection_info/: __init__.py  border_shadow.py  controller.py  hook_manager.py  lock_ratio.py  panel.py  rounded_corners.py
main/ui/settings_ui/: __init__.py  components.py  dialog.py  mock_config.py  page_about.py  (+8 more)
packaging/: build_no_ocr.py  build_no_ocr_onefile.py  build_with_ocr.py  build_with_ocr_onefile.py  jietuba_no_ocr.spec
pin/: pin_manager.py  pin_toolbar.py
rust_libs/: Cargo.toml
rust_libs/gifrecorder/: Cargo.toml  pyproject.toml
rust_libs/gifrecorder/src/: capture.rs  decoder.rs  frame_store.rs  gif_export.rs  jpeg.rs  lib.rs  recorder.rs  resize.rs
rust_libs/longstitch/: Cargo.toml  lib.rs  pyproject.toml  test.c
rust_libs/longstitch/src/: hash.rs  image_hash.rs  lcs.rs  lib.rs  screen_recorder.rs  scroll_screenshot_service.rs  stitch.rs  utils.rs
rust_libs/pyclipboard/: Cargo.toml  README.md  pyproject.toml
rust_libs/pyclipboard/pyclipboard-template/: Cargo.toml  README.md  example_clipboard.db  pyproject.toml  test.db
rust_libs/pyclipboard/pyclipboard-template/examples/: demo.py
rust_libs/pyclipboard/pyclipboard-template/src/: database.rs  lib.rs  types.rs
rust_libs/pyclipboard/python/pyclipboard/: __init__.py
rust_libs/pyclipboard/src/: database.rs  lib.rs  types.rs
rust_libs/windows_media_ocr/: Cargo.toml  pyproject.toml
rust_libs/windows_media_ocr/examples/: recognize_from_bytes.rs  recognize_from_file.rs
rust_libs/windows_media_ocr/src/: lib.rs  oneocr_python.rs  python.rs
rust_libs/windows_media_ocr/src/oneocr/: dll_loader.rs  engine.rs  ffi.rs  mod.rs
svg/: emoji_groups.json
tools/: ellipse.py  eraser.py
translation/: deepl_service.py  translation_manager.py
translations/: app_ja.qm  app_ja.xml
ui/: __init__.py  base_settings_panel.py  screenshot_window.py
新架构文件/: main_app.py
新架构文件/canvas/: __init__.py  layer_editor.py  snap_system.py
新架构文件/capture/: capture_service.py
新架构文件/pin/: __init__.py  pin_shadow_window.py  pin_translation.py
新架构文件/stitch/: __init__.py
新架构文件/tools/: cursor_manager.py
新架构文件/translations/: app_en.xml
新架构文件/ui/: settings_window.py  shape_settings_panel.py
(+12 files in other folders)
