[workspace]
members = [
    "windows_media_ocr",
    "longstitch",
    "pyclipboard",
]
resolver = "2"

# 统一管理共享依赖版本
[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 图片处理
image = "0.25"

# 统一的 release 优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
