[package]
name = "longstitch"
version = "0.3.0"
edition = "2021"

[lib]
name = "longstitch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
image = "0.24"
imageproc = "0.23"
hora = "0.1"
rayon = "1.7"
serde.workspace = true
fast_image_resize = "2.5"
